# confu_algorithm

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ProjectOptions.cmake  README.md  conanfile.py  conanfile.txt  conenfile.py  main.cxx
conan/: conanfile.py
conan/test_package/src/: example.cpp
confu_algorithm/: CMakeLists.txt  binaryFind.hxx  constrainedNumber.hxx  createChainViews.hxx  findIndex.hxx  stableUniqueElements.hxx
src/: CMakeLists.txt  createChainViews.hxx  stableUniqueElements.hxx  util.hxx
test/: CMakeLists.txt  binaryFind.cxx  constrainedNumber.cxx  createChainViews.cxx  findIndex.cxx  playground.cxx  stableUniqueElements.cxx
test_package/: CMakeLists.txt
test_package/src/: example.cpp
